# voiceSTS

./: .gitignore  README.md  conda-recipe.yaml  config.properties  main.py  pipe.sh  pyproject.toml
voiceagent/: actions.py  codeAgent.py  prompts.yaml  voiceAgent.py
voiceagent/communication/: communicator.py
voiceagent/helper/: communication.py  constants.py
